# hunting_season

./: .gitignore  CMakeLists.txt  CMakePresets.json  TODO  main.cpp
classes/: Background.hpp  BulletManager.hpp  BulletPack.hpp  Crosshair.hpp  Duck.hpp  DuckManager.hpp  Game.hpp  StatsDisplayer.hpp
classes/base/: IGameEntity.hpp
classes/defs/: TypeAliasses.hpp
srcs/: Background.cpp  BulletManager.cpp  BulletPack.cpp  CMakeLists.txt  Crosshair.cpp  Duck.cpp  DuckManager.cpp  Game.cpp  StatsDisplayer.cpp
